--- a/src/app/assets/global-styles/globals.css
+++ b/src/app/assets/global-styles/globals.css
@@ -20,3 +20,9 @@ body {
   position: absolute;
   white-space: nowrap;
 }
+
+:focus-visible {
+  outline: 0.375rem double var(--gray-15);
+  box-shadow: 0 0 0 0.25rem var(--gray-1);
+  border-radius: 0.125rem;
+}
