--- a/src/app/components/skip-link/SkipLink.module.css
+++ b/src/app/components/skip-link/SkipLink.module.css
@@ -13,9 +13,10 @@
   top: 5px;
   left: 5px;
   z-index: 1000;
-  color: var(--gray-15);
-  background-color: var(--tertiary-accent);
-  padding: 0.6rem 1rem;
+  color: var(--gray-1);
+  background-color: var(--tertiary-12);
+  padding: 1rem 1.4rem;
   font-size: var(--fs-500);
   font-weight: var(--f-wei-600);
+  border-radius: 2em;
 }
