--- a/src/app/assets/global-styles/globals.css
+++ b/src/app/assets/global-styles/globals.css
@@ -10,6 +10,65 @@ body {
   font-stretch: var(--f-str-100);
 }
 
+/* .content-grid {
+  --padding-inline: 1rem;
+  --breakout-max-width: 1200px;
+  --content-max-width: 900px;
+
+  --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2);
+
+  display: grid;
+  grid-template-columns:
+    [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - (var(--padding-inline) * 2), var(--content-max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
+}
+
+.content-grid> :not(.breakout, .full-width),
+.full-width> :not(.breakout, .full-width) {
+  grid-column: content;
+}
+
+.content-grid>.breakout {
+  grid-column: breakout;
+}
+
+.content-grid>.full-width {
+  grid-column: full-width;
+
+  display: grid;
+  grid-template-columns: inherit;
+} */
+
+/* Layout grid implementation */
+.layout-grid {
+  --padding-inline: 1rem;
+  --main-max-width: 75rem;
+  --narrow-max-width: 65rem;
+  --main-size: calc((var(--main-max-width) - var(--narrow-max-width)) / 2);
+
+  display: grid;
+  grid-template-columns:
+    [wide-start] minmax(var(--padding-inline), 1fr) [main-start] minmax(0, var(--main-size)) [narrow-start] min(100% - (var(--padding-inline) * 2), var(--narrow-max-width)) [narrow-end] minmax(0, var(--main-size)) [main-end] minmax(var(--padding-inline), 1fr) [wide-end];
+}
+
+.layout-grid> :not(.narrow, .wide-width),
+.wide-width> :not(.narrow, .wide-width) {
+  grid-column: main;
+}
+
+.layout-grid>.narrow,
+.wide-width>.narrow {
+  grid-column: narrow;
+}
+
+.layout-grid>.wide-width,
+.wide-width>.wide-width {
+  grid-column: wide;
+
+  display: grid;
+  grid-template-columns: inherit;
+}
+
+/* Layout grid end */
 
 .visually-hidden {
   width: 1px;
