--- a/src/app/components/header/Header/Header.module.css
+++ b/src/app/components/header/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   background-color: var(--primary-6);
-  padding-block: min(1.4vw, var(--space-400));
+  padding-block: min(2vw, var(--space-400));
 }
 
 .container {
@@ -19,12 +19,13 @@
 }
 
 .logo svg {
-  /* width: 3rem; */
-  height: min(8vw, 3rem);
+  width: auto;
+  height: min(9vw, 48px);
   filter: drop-shadow(var(--shadow-400));
 }
 
 .logo p {
+  display: none;
   font-size: min(4vw, var(--fs-600));
   font-weight: var(--f-wei-500);
   margin-left: var(--space-200);
@@ -39,10 +40,18 @@
   display: flex;
   gap: var(--space-100);
   font-weight: var(--f-wei-500);
-  padding-inline-end: var(--space-900)
+  padding-inline-end: var(--space-700)
 }
 
 @media (min-width: 44rem) {
+
+  .logo p {
+    display: block;
+  }
+}
+
+@media (min-width: 34rem) {
+
   .quickLinks {
     display: block;
   }
