--- a/src/app/components/header/Menu/Menu.module.css
+++ b/src/app/components/header/Menu/Menu.module.css
@@ -8,11 +8,11 @@
   background: none;
   border: none;
   padding: none;
+  color: var(--gray-15);
 }
 
 .button>svg {
   width: 30px;
   height: 30px;
-
-
+  color: var(--gray-15);
 }
