--- a/src/app/components/header/MenuDrawer/MenuDrawer.module.css
+++ b/src/app/components/header/MenuDrawer/MenuDrawer.module.css
@@ -20,4 +20,46 @@
   width: min(100%, 500px);
   background-color: var(--secondary-11);
   color: var(--gray-2);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: var(--space-200);
+  padding: var(--space-400);
+  overflow-y: auto;
+  /* overflow-y: clip; */
+}
+
+.summary {
+  font-size: var(--fs-900);
+  cursor: pointer;
+}
+
+.navLinks {
+  text-align: right;
+  font-size: var(--fs-500);
+}
+
+.closeBtn {
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: var(--space-200);
+  font-size: var(--fs-500);
+  font-weight: var(--f-wei-600);
+  padding: 1rem 3rem;
+  border: none;
+  border-radius: 1em;
+  box-shadow: var(--shadow-400);
+  background-color: var(--primary-3);
+  transition: scale 0.2s;
+}
+
+.closeBtn:hover {
+  scale: 1.02
+}
+
+.closeBtn>svg {
+  width: 2em;
+  height: 2em;
 }
