--- a/src/app/assets/global-styles/fonts.css
+++ b/src/app/assets/global-styles/fonts.css
@@ -1,21 +1,33 @@
 :root {
   --fs-hero: clamp(3.052rem, 6vw, 4.5rem);
-  --fs-900: 3.052rem;
+  /* --fs-900: 3.052rem;
   --fs-800: 2.441rem;
   --fs-700: 1.953rem;
   --fs-600: 1.563rem;
   --fs-500: 1.25rem;
   --fs-400: 1rem;
   --fs-300: 0.8rem;
-  --fs-200: 0.64rem;
+  --fs-200: 0.64rem; */
+  --fs-100: clamp(0.51rem, -0.02vi + 0.52rem, 0.5rem);
+  --fs-200: clamp(0.64rem, 0.05vi + 0.63rem, 0.67rem);
+  --fs-300: clamp(0.8rem, 0.16vi + 0.76rem, 0.89rem);
+  --fs-400: clamp(1rem, 0.33vi + 0.92rem, 1.19rem);
+  --fs-500: clamp(1.25rem, 0.59vi + 1.11rem, 1.58rem);
+  --fs-600: clamp(1.56rem, 0.97vi + 1.34rem, 2.11rem);
+  --fs-700: clamp(1.95rem, 1.52vi + 1.6rem, 2.81rem);
+  --fs-800: clamp(2.44rem, 2.31vi + 1.9rem, 3.75rem);
+  --fs-900: clamp(3.05rem, 3.44vi + 2.25rem, 5rem);
 
   --f-str-75: 75%;
   --f-str-100: 100%;
   --f-str-125: 125%;
 
   --f-wei-200: 200;
+  --f-wei-300: 300;
   --f-wei-400: 400;
   --f-wei-500: 500;
   --f-wei-600: 600;
+  --f-wei-700: 700;
+  --f-wei-800: 800;
   --f-wei-900: 900;
 }
