Working on mobile CSS for main navigation

--- a/src/app/components/header/MenuDrawer/MenuDrawer.module.css
+++ b/src/app/components/header/MenuDrawer/MenuDrawer.module.css
@@ -14,60 +14,61 @@
 
 .navDrawer {
   position: absolute;
-  inset: var(--space-400);
+  inset: min(2vw, var(--space-400));
   background-color: var(--secondary-11);
   color: var(--gray-2);
-  padding: var(--space-400);
+  padding-block: min(3vw, var(--space-400));
   overflow-y: auto;
-  border-radius: 2rem;
+  border-radius: min(2vw, var(--space-400));
 }
 
 .innerContainer {
   display: grid;
   grid-template-columns: 1fr;
-  margin-inline: 5rem;
+  margin-inline: calc(var(--space-800) + 0.5rem);
 }
 
 @media (min-width: 48rem) {
   .innerContainer {
     grid-template-rows: repeat(3, auto);
-    grid-template-columns: repeat(3, 33.333%);
-    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    /* gap: 1rem; */
   }
 }
 
 .closeBtn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: var(--space-200);
+  right: var(--space-100);
   border: none;
   background: none
 }
 
 .closeBtn>svg {
-  width: 2em;
-  height: 2em;
+  width: var(--space-700);
+  height: var(--space-700);
   color: var(--gray-2);
 }
 
 .details {
-  padding: var(--space-200);
-  margin-left: var(--space-800);
+  margin-block: var(--space-200);
+}
+
+.details li {
+  padding-block: var(--space-200);
+  margin-inline-start: var(--space-300)
 }
 
 .summary {
-  font-size: var(--fs-600);
-  list-style-position: outside;
+  font-size: var(--fs-500);
   cursor: pointer;
   user-select: none;
+  padding: var(--space-100) var(--space-300);
+  background-color: var(--secondary-12);
+  border-radius: var(--space-100);
 }
 
 .summary::marker,
 .summary::-webkit-details-marker {
   color: var(--primary-8);
-}
-
-.accordion {
-  /* text-align: right; */
-  /* font-size: var(--fs-500); */
 }
