Acordeon CSS done

--- a/src/app/components/header/MenuDrawer/MenuDrawer.module.css
+++ b/src/app/components/header/MenuDrawer/MenuDrawer.module.css
@@ -25,6 +25,7 @@
 .innerContainer {
   display: grid;
   grid-template-columns: 1fr;
+  gap: var(--space-200);
   margin-inline: calc(var(--space-800) + 0.5rem);
 }
 
@@ -34,6 +35,12 @@
     grid-template-columns: repeat(3, 1fr);
     /* gap: 1rem; */
   }
+}
+
+.quickLinks {
+  justify-self: center;
+  display: flex;
+  gap: var(--space-100);
 }
 
 .closeBtn {
