Menu CSS almost done, container query too...

--- a/src/app/assets/global-styles/fonts.css
+++ b/src/app/assets/global-styles/fonts.css
@@ -19,7 +19,9 @@
   --fs-900: clamp(3.05rem, 3.44vi + 2.25rem, 5rem);
 
   --f-str-75: 75%;
+  --f-str-90: 90%;
   --f-str-100: 100%;
+  --f-str-110: 110%;
   --f-str-125: 125%;
 
   --f-wei-200: 200;
@@ -30,4 +32,28 @@
   --f-wei-700: 700;
   --f-wei-800: 800;
   --f-wei-900: 900;
+}
+
+h1 {
+  font-size: var(--fs-800);
+  font-weight: var(--f-wei-900);
+  font-stretch: var(--f-str-90);
+}
+
+h2 {
+  font-size: var(--fs-600);
+  font-weight: var(--f-wei-800);
+  font-stretch: var(--f-str-90);
+}
+
+h3 {
+  font-size: var(--fs-500);
+  font-weight: var(--f-wei-700);
+  font-stretch: var(--f-str-100);
+}
+
+h4 {
+  font-size: var(--fs-400);
+  font-weight: var(--f-wei-600);
+  font-stretch: var(--f-str-100);
 }
