--- a/src/app/components/header/MenuDrawer/MenuDrawer.module.css
+++ b/src/app/components/header/MenuDrawer/MenuDrawer.module.css
@@ -23,30 +23,37 @@
 }
 
 .innerContainer {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: var(--space-200);
-  margin-inline: calc(var(--space-800) + 0.5rem);
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-500);
+  max-width: 1200px;
+  padding-inline: calc(var(--space-800) + 0.5rem);
+  margin: auto;
+}
+
+.innerContainer>div {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 330px;
+  border-top: var(--space-100) solid var(--primary-6);
+  padding-block-start: var(--space-500);
 }
 
 @media (min-width: 48rem) {
-  .innerContainer {
-    grid-template-rows: repeat(3, auto);
-    grid-template-columns: repeat(3, 1fr);
-    /* gap: 1rem; */
-  }
+  .innerContainer {}
 }
 
 .quickLinks {
-  justify-self: center;
   display: flex;
+  justify-content: center;
   gap: var(--space-100);
+  margin-block-end: var(--space-400);
 }
 
 .closeBtn {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: calc(var(--space-200) + 1.3vw);
+  right: calc(var(--space-100) + 1.3vw);
   border: none;
   background: none
 }
@@ -67,7 +74,9 @@
 }
 
 .summary {
-  font-size: var(--fs-500);
+  font-size: var(--fs-600);
+  font-weight: var(--f-wei-800);
+  font-stretch: var(--f-str-90);
   cursor: pointer;
   user-select: none;
   padding: var(--space-100) var(--space-300);
@@ -78,4 +87,28 @@
 .summary::marker,
 .summary::-webkit-details-marker {
   color: var(--primary-8);
+}
+
+.containerQuery {
+  container-type: inline-size;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-500);
+}
+
+@container (min-width: 680px) {
+
+  .info {
+    flex-direction: row;
+  }
+
+  .info>div {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 50%;
+  }
+
 }
