Menu finished, now on to translation. Created static routes too.

--- a/src/app/assets/global-styles/globals.css
+++ b/src/app/assets/global-styles/globals.css
@@ -32,10 +32,18 @@ button {
 }
 
 a {
-  text-underline-offset: 0.125rem;
+  text-underline-offset: 0.14em;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 p:not(:last-child) {
+  margin-bottom: var(--space-200);
+}
+
+.flow>*:not(:last-child) {
   margin-bottom: var(--space-200);
 }
 
