--- a/src/app/components/header/MenuDrawer/MenuDrawer.module.css
+++ b/src/app/components/header/MenuDrawer/MenuDrawer.module.css
@@ -39,8 +39,8 @@
   padding-block-start: var(--space-500);
 }
 
-@media (min-width: 48rem) {
-  .innerContainer {}
+.innerContainer h2 {
+  margin-block-end: var(--space-200);
 }
 
 .quickLinks {
@@ -79,6 +79,7 @@
   font-stretch: var(--f-str-90);
   cursor: pointer;
   user-select: none;
+  -webkit-user-select: none;
   padding: var(--space-100) var(--space-300);
   background-color: var(--secondary-12);
   border-radius: var(--space-100);
