--- a/src/app/components/header/MenuDrawer/MenuDrawer.module.css
+++ b/src/app/components/header/MenuDrawer/MenuDrawer.module.css
@@ -14,7 +14,7 @@
 
 .navDrawer {
   position: absolute;
-  inset: min(2vw, var(--space-400));
+  inset: min(1.5vw, var(--space-400));
   background-color: var(--secondary-11);
   color: var(--gray-2);
   padding-block: min(3vw, var(--space-400));
@@ -25,7 +25,7 @@
 .innerContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--space-500);
+  gap: var(--space-600);
   max-width: 1200px;
   padding-inline: calc(var(--space-800) + 0.5rem);
   margin: auto;
@@ -56,7 +56,8 @@
   top: calc(var(--space-200) + 1.3vw);
   right: calc(var(--space-100) + 1.3vw);
   border: none;
-  background: none
+  background: none;
+  padding: 0.5rem;
 }
 
 .closeBtn>svg {
