--- a/src/app/assets/global-styles/globals.css
+++ b/src/app/assets/global-styles/globals.css
@@ -4,7 +4,7 @@
 @import url("layout-grid.css");
 
 :root {
-  /* interpolate-size: allow-keywords; */
+  interpolate-size: allow-keywords;
 
   --space-100: 0.25rem;
   --space-200: 0.5rem;
