Most of footer done, mailchimp suscribe btn done

--- a/src/app/assets/global-styles/globals.css
+++ b/src/app/assets/global-styles/globals.css
@@ -31,11 +31,30 @@ button {
   cursor: pointer;
 }
 
+.btnLink {
+  background-color: var(--secondary-accent);
+  border: 3px solid var(--secondary-12);
+  color: var(--primary-16);
+  font-weight: var(--f-wei-600);
+  text-decoration: none;
+  padding: var(--space-200) var(--space-800);
+  border-radius: 16px;
+  box-shadow: var(--shadow-400);
+  transition: all 0.3s ease-in-out;
+  display: inline-block;
+}
+
+.btnLink:hover,
+:focus {
+  scale: 1.03;
+}
+
 a {
   text-underline-offset: 0.14em;
 }
 
-a:hover {
+a:hover,
+:focus {
   text-decoration: none;
 }
 
