--- a/src/components/Header/LangSwitcherSelect/LangSwitcherSelect.module.css
+++ b/src/components/Header/LangSwitcherSelect/LangSwitcherSelect.module.css
@@ -9,6 +9,10 @@
   background-color: var(--primary-5);
 }
 
+.container:hover {
+  background-color: var(--primary-4);
+}
+
 .select {
   /* // A reset of styles, including removing the default dropdown arrow */
   appearance: none;
