--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -1,8 +1,10 @@
 .carouselContainer {
-  position: relative;
+  /* position: relative; */
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 10px;
+  align-self: stretch;
 }
 
 .navButton {
@@ -20,14 +22,28 @@
   background: rgba(0, 0, 0, 0.7);
 }
 
+.slider {
+  align-self: stretch;
+}
+
 .slider>ul {
-  width: 100%;
+  /* width: 100%; */
   height: 500px;
-  padding: 20px;
   display: flex;
   gap: 4vw;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
+
+  /* Hide scrollbar */
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.slider>ul::-webkit-scrollbar {
+  display: none;
 }
 
 .slider li {
@@ -40,7 +56,7 @@
 }
 
 .slider li:nth-child(even) {
-  background-color: cyan;
+  background-color: brown;
 }
 
 .slider li:nth-child(odd) {
