Fixed shadow-400 estethic

--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -4,10 +4,10 @@
 }
 
 
-.slider {
-  /* align-self: stretch; */
-  /* grid-row: 1 / 2; */
-}
+/* .slider {
+  align-self: stretch;
+  grid-row: 1 / 2;
+} */
 
 .slider>ul {
   /* width: 100%; */
