--- a/src/assets/global-styles/globals.css
+++ b/src/assets/global-styles/globals.css
@@ -16,7 +16,8 @@
   --space-800: 2rem;
   --space-900: 3rem;
 
-  --shadow-400: 2px 2px 3px var(--gray-7);
+  --shadow-300: 1px 1px 4px var(--gray-8);
+  --shadow-400: 2px 2px 6px var(--gray-6);
 }
 
 body {
@@ -29,6 +30,9 @@ body {
 
 button {
   cursor: pointer;
+  border: none;
+  background-color: transparent;
+  padding: 0;
 }
 
 .btn {
