--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -1,8 +1,14 @@
 .carouselContainer {
   /* position: relative; */
   align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-3);
+  padding: var(--space-300);
+  border-radius: var(--space-700);
+  box-shadow: var(--shadow-400);
+  /* gap: 1rem; */
 }
-
 
 /* .slider {
   align-self: stretch;
@@ -10,14 +16,13 @@
 } */
 
 .slider>ul {
-  /* width: 100%; */
-  /* height: 500px; */
+  height: min(40vh, 400px);
+  border-top-left-radius: calc(var(--space-700) - var(--space-300));
+  border-top-right-radius: calc(var(--space-700) - var(--space-300));
   display: flex;
-  gap: 4vw;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
-
-  /* Hide scrollbar FIrefox & Edge */
+  /* Hide scrollbar Firefox & Edge */
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -30,6 +35,7 @@
 .slider li {
   flex: 0 0 100%;
   scroll-snap-align: center;
+  background-color: var(--primary-4)
 }
 
 .slider li>div {
@@ -37,18 +43,42 @@
 
 }
 
-.slider li:nth-child(even) {
-  background-color: rgb(240, 186, 186);
-}
-
-.slider li:nth-child(odd) {
-  background-color: rgb(217, 198, 235);
-}
-
 .buttonsContainer {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  grid-row: 2 / 3;
-  /* z-index: 10; */
+  align-items: center;
+  background-color: var(--primary-4);
+  border-bottom-left-radius: calc(var(--space-700) - var(--space-300));
+  border-bottom-right-radius: calc(var(--space-700) - var(--space-300));
+}
+
+.buttonsContainer svg {
+  height: 1.6rem;
+  width: auto;
+}
+
+.navButton {
+  padding-block: var(--space-300);
+  padding-inline: var(--space-300);
+  /* border: 1px solid red; */
+}
+
+
+.tagLineContainer {
+  font-size: var(--fs-200);
+  text-align: center;
+  margin-block-start: var(--space-100)
+}
+
+.menuCarousel {
+  display: flex;
+  gap: 10px;
+  justify-content: space-around;
+  padding-inline: 0px;
+  margin-block: 20px;
+  /* gap: 5px; */
+}
+
+.menuCarouselBtn {
+  font-size: var(--fs-300);
 }
