--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -72,16 +72,20 @@
 
 .menuCarousel {
   display: flex;
-  gap: 10px;
-  justify-content: space-around;
+  gap: 5px;
+  justify-content: space-between;
   padding-inline: 0px;
   margin-block: 20px;
   /* gap: 5px; */
 }
 
 .menuCarouselBtn {
+  flex: 1;
   font-size: var(--fs-300);
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid var(--primary-6);
 }
