--- a/src/assets/global-styles/globals.css
+++ b/src/assets/global-styles/globals.css
@@ -18,6 +18,8 @@
 
   --shadow-300: 1px 1px 4px var(--gray-8);
   --shadow-400: 2px 2px 6px var(--gray-6);
+
+  --transition-400: all 0.3s ease-in-out;
 }
 
 body {
