--- a/src/assets/global-styles/colors.css
+++ b/src/assets/global-styles/colors.css
@@ -91,7 +91,7 @@
     --gray-15: oklch(16% 0.003 215);
     --gray-16: oklch(10% 0.002 215);
     --gray-accent: oklch(84% 0.02 215);
-
+    /* 
     --primary-1: oklch(98% 0.006 215);
     --primary-2: oklch(97% 0.012 215);
     --primary-3: oklch(93% 0.02 215);
@@ -144,6 +144,61 @@
     --tertiary-14: oklch(20% 0.018 65);
     --tertiary-15: oklch(16% 0.014 65);
     --tertiary-16: oklch(10% 0.01 65);
+    --tertiary-accent: oklch(84% 0.1 65); */
+
+    --primary-1: oklch(0.96 0.02 215);
+    --primary-2: oklch(0.94 0.03 215);
+    --primary-3: oklch(0.91 0.05 215);
+    --primary-4: oklch(0.88 0.07 215);
+    --primary-5: oklch(0.85 0.1 215);
+    --primary-6: oklch(0.81 0.12 215);
+    --primary-7: oklch(0.78 0.15 215);
+    --primary-8: oklch(0.69 0.16 215);
+    --primary-9: oklch(0.6 0.14 215);
+    --primary-10: oklch(0.55 0.13 215);
+    --primary-11: oklch(0.51 0.12 215);
+    --primary-12: oklch(0.45 0.1 215);
+    --primary-13: oklch(0.4 0.09 215);
+    --primary-14: oklch(0.35 0.08 215);
+    --primary-15: oklch(0.29 0.07 215);
+    --primary-16: oklch(0.11 0.03 215);
+    --primary-accent: oklch(84% 0.1 215);
+
+    --secondary-1: oklch(0.97 0.02 5);
+    --secondary-2: oklch(0.95 0.03 5);
+    --secondary-3: oklch(0.93 0.05 5);
+    --secondary-4: oklch(0.9 0.07 5);
+    --secondary-5: oklch(0.87 0.1 5);
+    --secondary-6: oklch(0.84 0.12 5);
+    --secondary-7: oklch(0.81 0.15 5);
+    --secondary-8: oklch(0.73 0.16 5);
+    --secondary-9: oklch(0.63 0.14 5);
+    --secondary-10: oklch(0.58 0.13 5);
+    --secondary-11: oklch(0.54 0.12 5);
+    --secondary-12: oklch(0.48 0.1 5);
+    --secondary-13: oklch(0.42 0.09 5);
+    --secondary-14: oklch(0.37 0.08 5);
+    --secondary-15: oklch(0.31 0.07 5);
+    --secondary-16: oklch(0.11 0.03 5);
+    --secondary-accent: oklch(84% 0.1 5);
+
+
+    --tertiary-1: oklch(0.97 0.02 65);
+    --tertiary-2: oklch(0.94 0.03 65);
+    --tertiary-3: oklch(0.92 0.05 65);
+    --tertiary-4: oklch(0.89 0.07 65);
+    --tertiary-5: oklch(0.86 0.1 65);
+    --tertiary-6: oklch(0.83 0.12 65);
+    --tertiary-7: oklch(0.8 0.15 65);
+    --tertiary-8: oklch(0.72 0.16 65);
+    --tertiary-9: oklch(0.62 0.14 65);
+    --tertiary-10: oklch(0.58 0.13 65);
+    --tertiary-11: oklch(0.53 0.12 65);
+    --tertiary-12: oklch(0.47 0.1 65);
+    --tertiary-13: oklch(0.42 0.09 65);
+    --tertiary-14: oklch(0.36 0.08 65);
+    --tertiary-15: oklch(0.3 0.07 65);
+    --tertiary-16: oklch(0.11 0.03 65);
     --tertiary-accent: oklch(84% 0.1 65);
 
     --title-accent: oklch(46.90% 0.136 7.85);
